--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -22,6 +22,7 @@
     <None Remove="icon\saved_post.png" />
     <None Remove="icon\settings.png" />
     <None Remove="icon\tutorial.png" />
+    <None Remove="icon\user_image.png" />
     <None Remove="img\BottomVector.png" />
     <None Remove="img\UpperVector.png" />
     <None Remove="img\Welcome.jpg" />
@@ -41,6 +42,7 @@
     <Resource Include="icon\saved_post.png" />
     <Resource Include="icon\settings.png" />
     <Resource Include="icon\tutorial.png" />
+    <Resource Include="icon\user_image.png" />
     <Resource Include="img\BottomVector.png" />
     <Resource Include="img\UpperVector.png" />
     <Resource Include="img\Welcome.jpg">
