--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -12,20 +12,31 @@
     <None Remove="icon\book.png" />
     <None Remove="icon\chatbot.png" />
     <None Remove="icon\chatbot_menu.png" />
+    <None Remove="icon\comment.png" />
     <None Remove="icon\community.png" />
+    <None Remove="icon\filter.png" />
     <None Remove="icon\help.png" />
     <None Remove="icon\home.png" />
+    <None Remove="icon\image.png" />
     <None Remove="icon\light.png" />
+    <None Remove="icon\like.png" />
     <None Remove="icon\logout.png" />
     <None Remove="icon\playlist.png" />
     <None Remove="icon\profile.png" />
     <None Remove="icon\saved_post.png" />
     <None Remove="icon\settings.png" />
+    <None Remove="icon\share.png" />
     <None Remove="icon\tutorial.png" />
     <None Remove="icon\user_image.png" />
+    <None Remove="icon\video.png" />
     <None Remove="img\BottomVector.png" />
     <None Remove="img\UpperVector.png" />
     <None Remove="img\Welcome.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="icon\comment.png" />
+    <Resource Include="icon\like.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,16 +44,20 @@
     <Resource Include="icon\chatbot.png" />
     <Resource Include="icon\chatbot_menu.png" />
     <Resource Include="icon\community.png" />
+    <Resource Include="icon\filter.png" />
     <Resource Include="icon\help.png" />
     <Resource Include="icon\home.png" />
+    <Resource Include="icon\image.png" />
     <Resource Include="icon\light.png" />
     <Resource Include="icon\logout.png" />
     <Resource Include="icon\playlist.png" />
     <Resource Include="icon\profile.png" />
     <Resource Include="icon\saved_post.png" />
     <Resource Include="icon\settings.png" />
+    <Resource Include="icon\share.png" />
     <Resource Include="icon\tutorial.png" />
     <Resource Include="icon\user_image.png" />
+    <Resource Include="icon\video.png" />
     <Resource Include="img\BottomVector.png" />
     <Resource Include="img\UpperVector.png" />
     <Resource Include="img\Welcome.jpg">
